--- a/main.html
+++ b/main.html
@@ -18,60 +18,29 @@
         <div id="ID" class="ID">
             <p>ID</p>
             &nbsp;&nbsp;
-            <input type="text">
+            <input type="text" id="myInput">
         </div>
 
 
         <div id="面部识别" class="面部识别" style="display: flex; flex-direction: column; height: 100%;">
-            <a href="record.html?source=面部识别"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; flex: 1;">
-                <p>面部识别</p>
-            </a>
-            <a href="record.html?source=面部识别"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-end; flex: 1;">
-                <img src="icon.png" alt="开始录制"
-                    style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
-            </a>
+            <p>面部识别</p>
+            <img src="icon.png" alt="开始录制" style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
         </div>
-
-
-
-
-
-
         <div id="舌相抓取" class="舌相抓取" style="display: flex; flex-direction: column; height: 100%;">
-            <a href="record.html?source=舌相抓取"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; flex: 1;">
-                <p>舌相抓取</p>
-            </a>
-            <a href="record.html?source=舌相抓取"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-end; flex: 1;">
-                <img src="icon.png" alt="开始录制"
-                    style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
-            </a>
+
+            <p>舌相抓取</p>
+            <img src="icon.png" alt="开始录制" style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
         </div>
         <div id="步态记录" class="步态记录" style="display: flex; flex-direction: column; height: 100%;">
-            <a href="record.html?source=步态记录"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; flex: 1;">
-                <p>步态记录</p>
-            </a>
-            <a href="record.html?source=步态记录"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-end; flex: 1;">
-                <img src="icon.png" alt="开始录制"
-                    style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
-            </a>
+            <p>步态记录</p>
+            <img src="icon.png" alt="开始录制" style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
         </div>
         <div id="患者自述" class="患者自述" style="display: flex; flex-direction: column; height: 100%;">
-            <a href="record.html?source=患者自述"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; flex: 1;">
-                <p>患者自述</p>
-            </a>
-            <a href="record.html?source=患者自述"
-                style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; justify-content: flex-end; flex: 1;">
-                <img src="icon.png" alt="开始录制"
-                    style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
-            </a>
+
+            <p>患者自述</p>
+            <img src="icon.png" alt="开始录制" style="max-width: 100%; max-height: 100%; width: 10em; margin-bottom: 10px;">
         </div>
+        
         <!-- <div id="文字转录" class="结果记录">
             <p>文字转录</p>
         </div> -->
@@ -80,7 +49,6 @@
         </button>
         <div id="结果记录" class="结果记录">
             <p>结果记录</p>
-
         </div>
         <div id="问卷1" class="问卷1">
             <p>问卷1</p>
