--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <script id="click-show-text" src="https://cdn.jsdelivr.net/npm/butterfly-extsrc/dist/click-show-text.min.js"
             data-mobile="false" data-text="富强,民主,文明,和谐,自由,平等,公正,法治,爱国,敬业,诚信,友善" data-fontsize="15px" data-random="false"
             async="async"></script>
-        <div id="ID" class="ID">
+        <div id="ID" class="ID" onclick="focusOnInput()">
             <p>ID</p>
             &nbsp;&nbsp;
             <input type="text" id="myInput">
