1、调整主界面播放按钮的大小 2、美化录制视频界面的按钮 3、简化部分代码

--- a/record.html
+++ b/record.html
@@ -18,13 +18,13 @@
     <!-- <video id="liveCamera" autoplay playsinline></video> -->
 
     <div class="top-bar">
-        <button id="goBack" onclick="goBack()">返回</button>
-        <button id="startRecord" onclick="startRecording()">启动录制</button>
+        <button class="btn" id="goBack" onclick="goBack()">返回</button>
+        <button class="btn" id="startRecord" onclick="startRecording()">启动录制</button>
         <span id="recordedTime">已录制：0 秒</span>
-        <button id="stopRecord" onclick="stopRecording()" disabled>停止录制</button>
-        <button id="saveRecord" onclick="saveRecording()" disabled>保存视频</button>
+        <button class="btn" id="stopRecord" onclick="stopRecording()" disabled>停止录制</button>
+        <button class="btn"id="saveRecord" onclick="saveRecording()" disabled>保存视频</button>
         <label id="playLabel">向下滑动观看回放</label>
-        <button id="playRecord" onclick="playRecording()" disabled>播放视频</button>
+        <button class="btn"id="playRecord" onclick="playRecording()" disabled>播放视频</button>
     </div>
 
     <br>
