增加诊断记录界面

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
             <p class="video_title">患者自述</p>
             <img class="icon" src="icon.png" alt="开始录制">
         </div>
-        
+
         <!-- <div id="文字转录" class="结果记录">
             <p>文字转录</p>
         </div> -->
@@ -65,10 +65,28 @@
             重置
         </div>
         <div class="g-progress" style="--progress: 0%" id="bar"></div>
+
+
+        <div class="inputBox" id="inputBox1">
+            <textarea required placeholder=" " id="boxText1"></textarea>
+            <span>面部诊断记录</span>
+        </div>
+        <div class="inputBox" id="inputBox2">
+            <textarea required placeholder=" " id="boxText2"></textarea>
+            <span>舌相诊断记录</span>
+        </div>
+        <div class="inputBox" id="inputBox3">
+            <textarea required placeholder=" " id="boxText3"></textarea>
+            <span>步态诊断记录</span>
+        </div>
+        <div class="inputBox" id="inputBox4">
+            <textarea required placeholder=" " id="boxText4"></textarea>
+            <span>自述诊断记录</span>
+        </div>
     </div>
 
     <script src="main.js"></script>
-    
+
 </body>
 
 </html>
